<resources>
    <string name="app_name">CovidApp</string>
    <string name="details">%1$s Details</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_permission_required_description">Permission to access your location is required to determine your country.</string>
    <string name="permission_required">Permission required</string>
    <string name="other_permission_required_description">Permission required for the proper application working.</string>
    <string name="determine_your_country">Determine your country</string>
    <string name="determine_country_from_phone_settings">Determine country from phone settings</string>
    <string name="refreshing">REFRESHING</string>
    <string name="refreshing_widget">Refreshing widget</string>
    <string name="refreshing_widget_error">Refreshing widget error</string>
    <string name="confirmed">confirmed</string>
    <string name="deaths">deaths</string>
    <string name="total_number_of_confirmed_cases">Total number of confirmed cases</string>
    <string name="daily_new_cases">Daily new cases</string>
    <string name="more_details">More details</string>
    <string name="date">date</string>
    <string name="active">active</string>
    <string name="recovered">recovered</string>
    <string name="scroll_automatically">Scroll automatically</string>
</resources>